--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">StudioTest</string>
+    <string name="app_name">长颈鹿闹钟</string>
     <string name="title_activity_alarm">闹钟响了</string>
-    <string name="title_activity_main2">Main2Activity</string>
 </resources>
